# olymplib

./: .gitignore  CMakeLists.txt  IO.cpp  README.md  act.cpp  act_ut.cpp  main.cpp  segtree.cpp  segtree_ut.cpp
gtest/: Makefile  cmake_install.cmake
